[tool.poetry]
name = "pistsovbot"
version = "0.1.0"
description = ""
authors = ["n.pistsov <n.pistsov@ritm.media>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telebot = "^0.0.5"
requests = "^2.31.0"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
